src/log/build_2025-05-30_16-37-34/xbox_control_pkg/stdout_stderr.log
running egg_info
writing ../build/xbox_control_pkg/xbox_control_pkg.egg-info/PKG-INFO
writing dependency_links to ../build/xbox_control_pkg/xbox_control_pkg.egg-info/dependency_links.txt
writing entry points to ../build/xbox_control_pkg/xbox_control_pkg.egg-info/entry_points.txt
writing requirements to ../build/xbox_control_pkg/xbox_control_pkg.egg-info/requires.txt
writing top-level names to ../build/xbox_control_pkg/xbox_control_pkg.egg-info/top_level.txt
reading manifest file '../build/xbox_control_pkg/xbox_control_pkg.egg-info/SOURCES.txt'
writing manifest file '../build/xbox_control_pkg/xbox_control_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying xbox_control_pkg/xbox_control_node.py -> /home/ras4/nuc_ws/src/build/xbox_control_pkg/build/lib/xbox_control_pkg
copying xbox_control_pkg/control_rizz.py -> /home/ras4/nuc_ws/src/build/xbox_control_pkg/build/lib/xbox_control_pkg
running install
running install_lib
copying /home/ras4/nuc_ws/src/build/xbox_control_pkg/build/lib/xbox_control_pkg/xbox_control_node.py -> /home/ras4/nuc_ws/src/install/xbox_control_pkg/lib/python3.10/site-packages/xbox_control_pkg
copying /home/ras4/nuc_ws/src/build/xbox_control_pkg/build/lib/xbox_control_pkg/control_rizz.py -> /home/ras4/nuc_ws/src/install/xbox_control_pkg/lib/python3.10/site-packages/xbox_control_pkg
byte-compiling /home/ras4/nuc_ws/src/install/xbox_control_pkg/lib/python3.10/site-packages/xbox_control_pkg/xbox_control_node.py to xbox_control_node.cpython-310.pyc
byte-compiling /home/ras4/nuc_ws/src/install/xbox_control_pkg/lib/python3.10/site-packages/xbox_control_pkg/control_rizz.py to control_rizz.cpython-310.pyc
  File "/home/ras4/nuc_ws/src/install/xbox_control_pkg/lib/python3.10/site-packages/xbox_control_pkg/control_rizz.py", line 37
    )
    ^
SyntaxError: positional argument follows keyword argument

running install_data
copying package.xml -> /home/ras4/nuc_ws/src/install/xbox_control_pkg/share/xbox_control_pkg
running install_egg_info
removing '/home/ras4/nuc_ws/src/install/xbox_control_pkg/lib/python3.10/site-packages/xbox_control_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../build/xbox_control_pkg/xbox_control_pkg.egg-info to /home/ras4/nuc_ws/src/install/xbox_control_pkg/lib/python3.10/site-packages/xbox_control_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing control_rizz_node script to /home/ras4/nuc_ws/src/install/xbox_control_pkg/lib/xbox_control_pkg
Installing xbox_control_node script to /home/ras4/nuc_ws/src/install/xbox_control_pkg/lib/xbox_control_pkg
writing list of installed files to '/home/ras4/nuc_ws/src/build/xbox_control_pkg/install.log'
